--- a/src/sass/favorite.scss
+++ b/src/sass/favorite.scss
@@ -20,6 +20,7 @@
 		border: 1px solid $border-color;
 		border-radius: 12px;
 		position: relative;
+		margin-bottom: 3em;
 
 		&::after {
 			content: "";
